<resources>
    <string name="app_name">Sintil</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_backup">Backup</string>
    <string name="drawer_item_restore">Restore</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_utility">Utility</string>

    <string name="event_title_hint">Event title</string>
    <string name="event_name_hint">Enter a title for the event</string>

    <string name="event_title">Event title</string>
    <string name="event_description">Optional event description</string>
    <string name="new_event">New Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="future_date">Scheduled start: %1$s</string>
    <string name="countdown_ended">Countdown ended at %1$s</string>
    <string name="future_countup">Scheduled start: %1$s</string>

    <string name="display_date">%1$02d-%2$02d-%3$d</string>
    <string name="display_time">%1$02d:%2$02d</string>

    <string name="text_save">Save ✔</string>
    <string name="text_cancel">✘ Cancel</string>
    <string name="text_preview">Preview</string>


    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>

    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="edt_date">Start Date or Target Date</string>
    <string name="edt_time">Start Time or Target Time</string>

    <string name="count_up_text">Summary: Count up from %1$s %2$s</string>
    <string name="count_down_text">Summary: Count down to %1$s %2$s</string>

    <string name="event_title_key">event_title_key</string>
    <string name="event_desc_key">event_desc_key</string>

    <!-- Drawer stuff -->
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_utility">Utilities</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Since or Until</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetrar. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>

    <!-- Error messages -->
    <string name="date_error1">Cannot count down to a past date</string>
    <string name="title_error1">Please enter the event title</string>

    <string name="count_up">Count up</string>
    <string name="count_down">Count down</string>


</resources>
