<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditTextPreference
        android:title="@string/event_title"
        android:key="@string/event_title_key"
        android:summary="Enter a title for the event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </EditTextPreference>
    <EditTextPreference
        android:title="@string/event_title"
        android:key="@string/event_desc_key"
        android:summary="Enter some optional sub heading text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </EditTextPreference>
</PreferenceScreen>