<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/tilTitle"
        android:layout_marginTop="20dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title"
            android:id="@+id/txtEventTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/primary_text_light"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view"
      >
        <android.support.design.widget.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description"
            android:inputType="textMultiLine"
            android:id="@+id/txtEventDescription"
            android:maxLines="3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/primary_text_light"/>
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation='horizontal'
        android:layout_below="@+id/view"

        android:layout_marginTop="10dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Count Down"
            android:theme="@style/MyRadioButton"
            android:id="@+id/radioButtonCountDown"
            android:checked="true"
            android:textAppearance="@android:style/TextAppearance.Small" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Count Up"
            android:id="@+id/radioButtonCountUp"
            android:theme="@style/MyRadioButton"
            android:checked="false"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:layout_marginLeft="74dp"
            android:layout_marginStart="74dp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linLayDateIn"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioDirection">

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tilDate"
            android:layout_marginTop="5dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/in_date"
                android:hint="@string/edt_date"
                android:inputType="date"
                android:textColor="@android:color/primary_text_light" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgCalendar"
            android:background="@android:color/transparent"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_calendar_question_black_36dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linLayTimeIn"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilTime">
        <android.support.design.widget.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/in_time"
            android:inputType="time"
            android:hint="@string/edt_time"
            android:textColor="@android:color/primary_text_light"
            />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/summary"

        android:textStyle="italic" />
    <View style="@style/Divider"/>
    <LinearLayout
        android:id="@+id/linLayColor"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgPalette"
            android:src="@drawable/ic_palette_black_48dp"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="30dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:borderWidth="0dp"
            app:elevation="0dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
    <View style="@style/Divider"/>

    <LinearLayout
        android:id="@+id/liLayCamera"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgCamera"
            android:src="@drawable/ic_photo_camera_black_24dp"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No image selected"
            android:id="@+id/txtImageInUse"
            android:layout_gravity="center"/>
    </LinearLayout>
    <Button style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/btnCancel"
        >
    </Button>
    <Button style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:id="@+id/btnOK"
        >
    </Button>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/txtSwitchDirection" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/text_secondary"
            android:textOn="@string/count_down"
            android:textOff="@string/count_up"
            android:padding="20dp"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>